[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game Objects/ObjectPicker.gd" type="Script" id=1]

[sub_resource type="GDScript" id=28]
script/source = "extends Area2D


func _ready():
	pass


func _process(_delta):
	global_position = get_global_mouse_position()
"

[sub_resource type="CircleShape2D" id=29]
radius = 32.0

[node name="ObjectPicker" type="Node"]
script = ExtResource( 1 )

[node name="Selector" type="Area2D" parent="."]
monitorable = false
collision_layer = 2147483648
collision_mask = 8
script = SubResource( 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Selector"]
shape = SubResource( 29 )

[node name="SpeedDisplayPos" type="Position2D" parent="."]

[node name="Label" type="Label" parent="SpeedDisplayPos"]
margin_left = -18.584
margin_top = -57.0667
margin_right = 21.416
margin_bottom = -43.0667
size_flags_horizontal = 4
text = "x1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/CenterContainer"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 30 )
step = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Selector" to="." method="_on_Selector_body_entered"]
[connection signal="body_exited" from="Selector" to="." method="_on_Selector_body_exited"]
